--- a/bullseye.yaml
+++ b/bullseye.yaml
@@ -1,25 +1,18 @@
-# Packages for examples/debian_snapshot.
-#
-#  Anytime this file is changed, the lockfile needs to be regenerated.
-#
-#  To generate the bullseye.lock.json run the following command
-#
+#  To generate the bullseye.lock.json run the following command:
 #     bazel run @bullseye//:lock
-#
-# See debian_package_index at WORKSPACE.bazel
 version: 1
 sources:
   - channel: bullseye main contrib
-    url: https://snapshot-cloudflare.debian.org/archive/debian/20240210T223313Z
+    url: https://snapshot-cloudflare.debian.org/archive/debian/20250320T204150Z
   - channel: bullseye-security main
-    url: https://snapshot-cloudflare.debian.org/archive/debian-security/20240210T223313Z
+    url: https://snapshot-cloudflare.debian.org/archive/debian-security/20250320T204150Z
   - channel: bullseye-updates main
-    url: https://snapshot-cloudflare.debian.org/archive/debian/20240210T223313Z/
+    url: https://snapshot-cloudflare.debian.org/archive/debian/20250320T204150Z/
 archs:
   - "amd64"
   - "arm64"
 packages:
-  - "busybox"
+  - "busybox-static"
   - "ca-certificates"
   - "curl"
   - "iproute2"
